[v#.#.#] ([month] [YYYY])
  - Editor: Support fields with the same name in the Fields View
  - Issues:
    - Display evidence in a table
    - Load evidence tab content asynchronously
    - Multi-delete evidence at the issue level
  - Tylium:
    - Import CSS manifests from addons
    - Move '...' (more actions) menu closer to the content affected by the actions of the menu
    - Remove extra left padding from the first line of content in a code block
    - Remove height restriction from code blocks
    - Simplify issues table columns
    - Update focus state outline color
  - Setup:
    - Add Setup Wizard
    - Avoid hard-coding "../../shared/"
    - Store gem dependencies under ./vendor/bundle/
  - Upgraded gems:
    - rails
  - Bugs fixes:
    - Comments: Show sticky toolbar when adding long comments
    - Tables: Prevent the select all button from selecting filtered out rows when a filter is been applied
    - Bug tracker items:
      - [item]
  - New integrations:
    - [integration]
  - Integration enhancements:
    - [integration]:
      - [future tense verb] [integration enhancement]
      - [integration bug fixes]:
        - [future tense verb] [integration bug fix]
  - Reporting enhancements:
    - [report type]:
      - [future tense verb] [reporting enhancement]
  - REST/JSON API enhancements:
    - [API entity]:
      - [future tense verb] [API enhancement]
  - Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v4.1.2 (December 2021)
  - Upgraded gems:
    - rails
  - Security Fixes:
    - High: Authenticated author path traversal

v4.1.0 (November 2021)
  - Editor:
    - Insert an appropriate single or multiline tag for blockquotes and codeblocks