@@ -1,7 +1,8 @@
 class IssuesController < AuthenticatedController
   include ActivityTracking
-  include ContentFromTemplate
   include ConflictResolver
+  include ContentFromTemplate
+  include DynamicFieldNamesCacher
   include LiquidEnabledResource
   include Mentioned
   include MultipleDestroy
@@ -17,10 +18,10 @@ class IssuesController < AuthenticatedController
   before_action :set_auto_save_key, only: [:new, :create, :edit, :update]
   before_action :set_affected_nodes, only: [:show]
 
+  EXTRA_COLUMNS = ['Title', 'Tags', 'Affected', 'Created', 'Created by', 'Updated'].freeze
+
   def index
-    @columns = @issues.map(&:fields).map(&:keys).uniq.flatten |
-      @rtp_default_fields |
-      ['Title', 'Tags', 'Affected', 'Created', 'Created by', 'Updated']
+    @columns = collection_field_names(@unsorted_issues) | @rtp_default_fields | EXTRA_COLUMNS
   end
 
   def show
@@ -145,13 +146,15 @@ class IssuesController < AuthenticatedController
     # We need a transaction because multiple DELETE calls can be issued from
     # index and a TOCTOR can appear between the Note read and the Issue.find
     Note.transaction do
-      @issues = Issue.where(node_id: @issuelib.id).select(
+      @unsorted_issues = Issue.where(node_id: @issuelib.id).select(
         'notes.id, notes.author, notes.text, '\
         'count(evidence.id) as affected_count, notes.created_at, notes.updated_at'
       ).
       joins('LEFT OUTER JOIN evidence on notes.id = evidence.issue_id').
       group('notes.id').
-      includes(:affected, :tags).sort
+      includes(:affected, :tags)
+
+      @issues = @unsorted_issues.sort
     end
   end
 
