@@ -4,6 +4,8 @@
     - Display evidence in a table
     - Load evidence tab content asynchronously
     - Multi-delete evidence at the issue level
+  - Increased table loading performance on Issues, Evidence, and Notes for
+    projects with *a lot* of issues, evidence, or notes
   - Tylium:
     - Import CSS manifests from addons
     - Move '...' (more actions) menu closer to the content affected by the actions of the menu
